--- a/index.html
+++ b/index.html
@@ -252,13 +252,12 @@
         <section class="skills" id="skills">
 
             <div class="section-header">
-                <h2>my skills</h2>
+                <h2>skills & tools</h2>
             </div>
 
             <div class="container">
                 <div class="section-intro">
-                    <p>I'm not an expert - but I strongly believe that I have all it takes to become one. Currently I am an enthusiast. I know a little bit about everything: I'm passionate about web design and development, new media and technologies, as well
-                        as marketing and social media. I am still developing new skills within those areas. Here are my skills:</p>
+                    <p><span class="highlight-it">Making things happen</span> and <span class="highlight-it">keeping people happy</span> - this is what I would describe my major skill that I would like to use and develop even further. Below my areas of focus + tools I am familiar with:</p>
                 </div>
 
                 <div class="flex-container">
@@ -296,14 +295,66 @@
                         <button type="button" class="skill-click-area skill-close"></button>
                         <div class="box skill-list">
                             <ul>
-                                <li>html5</li>
-                                <li>css3 (and sass)</li>
-                                <li>javascript basics</li>
-                                <li>jquery</li>
-                                <li>bootstrap 3</li>
-                                <li>wordpress cms</li>
+                                <li>html5, css3 (and sass), javascript</li>
+                                <li>web-base technologies</li>
+                                <li>best practices</li>
+                                <li>current standards</li>
 								<li>rwd</li>
-								<li>email coding</li>
+						
+                            </ul>
+                        </div>
+                        <div class="smallbox">
+                        </div>
+                        <div class="back-box">
+                        </div>
+                        <button type="button" class="box skill-close-box">
+                            <i class="fa fa-times bigicon"></i>
+                        </button>
+
+                    </div>
+
+                    <div class="bigbox skill" id="skill2">
+                        <div class="skill-bg">
+                        </div>
+                        <button type="button" class="skill-click-area" id="skill2-button">
+                        </button>
+                        <div class="basic-box">
+
+                            <svg>
+                                <title>Digital</title>
+                                <defs>
+                                    <mask id="mask2" x="0" y="0" width="200%" height="100%" >
+
+                                        <rect class="alpha" x="0" y="0" width="100%" height="100%"/>
+                                        <text class="skill-header" x="50%" y="25%" dy="0.3em">Digital</text>
+
+                                    </mask>
+                                </defs>
+
+                                <rect class="color-rect" x="0" y="0" width="50%"  height="100%"/>
+                                <rect class="white-rect" x="50%" y="0" width="50%" height="100%"/>
+                            </svg>
+
+                        </div>
+
+                        <div class="box skill-click-box">
+                            <i class="fa fa-plus bigicon"></i>
+                        </div>
+                    </div>
+
+
+                    <div class="bigbox skill-details" id="skill2-details">
+                        <button type="button" class="skill-click-area skill-close">
+                        </button>
+                        <div class="box skill-list">
+                            <ul>
+                                <li>email marketing</li>
+                                <li>content creation</li>
+                                <li>social media platforms</li>
+                                <li>advertising</li>
+                                <li>digital strategy</li>
+                                <li>research</li>
+
                             </ul>
                         </div>
                         <div class="smallbox">
@@ -317,7 +368,7 @@
                     </div>
 
 
-                    <div class="bigbox skill" id="skill2">
+                    <div class="bigbox skill" id="skill3">
                         <div class="skill-bg">
                         </div>
                         <button type="button" class="skill-click-area" id="skill2-button">
@@ -327,7 +378,7 @@
                             <svg>
                                 <title>Design</title>
                                 <defs>
-                                    <mask id="mask2" x="0" y="0" width="200%" height="100%" >
+                                    <mask id="mask3" x="0" y="0" width="200%" height="100%" >
 
                                         <rect class="alpha" x="0" y="0" width="100%" height="100%"/>
                                         <text class="skill-header" x="50%" y="25%" dy="0.3em">Design</text>
@@ -347,7 +398,7 @@
                     </div>
 
 
-                    <div class="bigbox skill-details" id="skill2-details">
+                    <div class="bigbox skill-details" id="skill3-details">
                         <button type="button" class="skill-click-area skill-close">
                         </button>
                         <div class="box skill-list">
@@ -372,63 +423,11 @@
 
 
 
-                    <div class="bigbox skill" id="skill3">
-                        <div class="skill-bg">
-                        </div>
-                        <button type="button" class="skill-click-area" id="skill3-button">
-                        </button>
-                        <div class="basic-box">
-
-                            <svg>
-                                <title>Digital</title>
-                                <defs>
-                                    <mask id="mask3" x="0" y="0" width="200%" height="100%" >
-
-                                        <rect class="alpha" x="0" y="0" width="100%" height="100%"/>
-                                        <text class="skill-header" x="50%" y="25%" dy="0.3em">Digital</text>
-
-                                    </mask>
-                                </defs>
-
-                                <rect class="color-rect" x="0" y="0" width="50%"  height="100%"/>
-                                <rect class="white-rect" x="50%" y="0" width="50%" height="100%"/>
-                            </svg>
-
-                        </div>
-
-                        <div class="box skill-click-box">
-                            <i class="fa fa-plus bigicon"></i>
-                        </div>
-                    </div>
-
-
-                    <div class="bigbox skill-details" id="skill3-details">
-                        <button type="button" class="skill-click-area skill-close">
-                        </button>
-                        <div class="box skill-list">
-                            <ul>
-                                <li>online marketing</li>
-                                <li>content creation</li>
-                                <li>social media platforms</li>
-                                <li>advertising</li>
-                                <li>strategy planning</li>
-                                <li>research</li>
-
-                            </ul>
-                        </div>
-                        <div class="smallbox">
-                        </div>
-                        <div class="back-box">
-                        </div>
-                        <button type="button" class="box skill-close-box">
-                            <i class="fa fa-times bigicon"></i>
-                        </button>
-
-                    </div>
 
 
 
 
+<!--
                     <div class="bigbox skill" id="skill4">
                         <div class="skill-bg">
                         </div>
@@ -442,7 +441,7 @@
                                     <mask id="mask4" x="0" y="0" width="200%" height="100%" >
 
                                         <rect class="alpha" x="0" y="0" width="100%" height="100%"/>
-                                        <text class="skill-header" x="50%" y="25%" dy="0.3em">Other...</text>
+                                        <text class="skill-header" x="50%" y="25%" dy="0.3em">Agile&Lean</text>
 
                                     </mask>
                                 </defs>
@@ -456,10 +455,10 @@
                         <div class="box skill-click-box striped">
                             <i class="fa fa-plus bigicon"></i>
                         </div>
-                    </div>
+                    </div>-->
 
 
-                    <div class="bigbox skill-details" id="skill4-details">
+                <!--    <div class="bigbox skill-details" id="skill4-details">
                         <button type="button" class="skill-click-area skill-close">
                         </button>
                         <div class="box skill-list">
@@ -482,7 +481,7 @@
                             <i class="fa fa-times bigicon"></i>
                         </button>
 
-                    </div>
+                    </div>-->
 
                 </div>
             </div>
