--- a/index.html
+++ b/index.html
@@ -257,7 +257,8 @@
 
             <div class="container">
                 <div class="section-intro">
-                    <p><span class="highlight-it">Making things happen</span> and <span class="highlight-it">keeping people happy</span> - this is what I would describe my major skill that I would like to use and develop even further. Below my areas of focus + tools I am familiar with:</p>
+                    <p><span class="blue-text">Making things happen</span>, <span class="mustard-text">removing obstackles on the way</span> and <span class="red-text">keeping people happy</span> by: <span class="highlight-it">learning</span>, <span class="highlight-it">adapting</span>, <span class="highlight-it">inspiring</span>, <span class="highlight-it">thinking</span>, <span class="highlight-it">listening</span>, <span class="highlight-it">building relations</span>, <span class="highlight-it">empowering people</span>, <span class="highlight-it">planning</span>, <span class="highlight-it">empracing the change</span>, <span class="highlight-it">improvising</span>, <span class="highlight-it">shifting perspectives</span>, <span class="highlight-it">finding a common ground</span> - this is what I would describe my major skills that I would like to use and develop even further.</p>
+                    <p> Below my areas of focus + tools I am familiar with:</p>
                 </div>
 
                 <div class="flex-container">
@@ -300,7 +301,7 @@
                                 <li>best practices</li>
                                 <li>current standards</li>
 								<li>rwd</li>
-						
+
                             </ul>
                         </div>
                         <div class="smallbox">
