--- a/index.html
+++ b/index.html
@@ -257,8 +257,23 @@
 
               <div class="container">
                 <div class="section-intro">
-                    <p><span class="blue-text">Making things happen</span>, <span class="mustard-text">removing obstacles on the way</span> and <span class="red-text">keeping people happy</span> by: <span class="highlight-it">continuous learning</span>, <span class="highlight-it">adapting</span>, <span class="highlight-it">inspiring</span>, <span class="highlight-it">thinking</span>, <span class="highlight-it">active listening</span>, <span class="highlight-it">building relations</span>, <span class="highlight-it">empowering&nbsp;people</span>, <span class="highlight-it">adaptive planning</span>, <span class="highlight-it"> embracing the change</span>, <span class="highlight-it">improvising</span>, <span class="highlight-it">shifting perspectives</span>, <span class="highlight-it">building kick-ass  teams</span>, <span class="highlight-it">nurturing trust</span>, <span class="highlight-it">creating processes that make sense</span> - this is what I would describe my major skills that I would like to use and develop even further.</p>
-                    <p> Below my areas of focus + tools I am familiar with:</p>
+                    <p><span class="blue-text">Making things happen</span>, <span class="mustard-text">removing obstacles on the way</span> and <span class="red-text">keeping people happy</span> by:
+                      <span class="highlight-it">creating processes that make sense</span>,
+                      <span class="highlight-it">continuous learning</span>,
+                      <span class="highlight-it">adapting</span>,
+                      <span class="highlight-it">inspiring</span>,
+                      <span class="highlight-it">thinking</span>,
+                      <span class="highlight-it">active listening</span>,
+                      <span class="highlight-it">building relations</span>,
+                      <span class="highlight-it">empowering&nbsp;people</span>,
+                      <span class="highlight-it">adaptive planning</span>,
+                      <span class="highlight-it">embracing the change</span>,
+                      <span class="highlight-it">improvising</span>,
+                      <span class="highlight-it">shifting perspectives</span>,
+                      <span class="highlight-it">building kick-ass  teams</span>,
+                      <span class="highlight-it">nurturing trust</span>
+                      - this is what I would describe my major skills that I would like to use and develop even further.</p>
+                    <p> Below my <span class="violet-text">areas of focus + tools</span> I am familiar with:</p>
                 </div>
 
                   <div class="flex-container">
