skills tag cloud tweaks

--- a/index.html
+++ b/index.html
@@ -257,22 +257,23 @@
 
               <div class="container">
                 <div class="section-intro">
-                    <p><span class="blue-text">Making things happen</span>, <span class="mustard-text">removing obstacles on the way</span> and <span class="red-text">keeping people happy</span> by:
-                      <span class="highlight-it">creating processes that make sense</span>,
-                      <span class="highlight-it">continuous learning</span>,
+                    <p><span class="blue-text">Making things happen</span>, <span class="mustard-text">removing obstacles on the way</span> and <span class="red-text">keeping people happy</span> by:</p>
+                    <p class="align-center">
+                      <span class="highlight-it">creating&nbsp;processes&nbsp;that&nbsp;make&nbsp;sense</span>,
+                      <span class="highlight-it">continuous&nbsp;learning</span>,
                       <span class="highlight-it">adapting</span>,
                       <span class="highlight-it">inspiring</span>,
                       <span class="highlight-it">thinking</span>,
-                      <span class="highlight-it">active listening</span>,
-                      <span class="highlight-it">building relations</span>,
+                      <span class="highlight-it">active&nbsp;listening</span>,
+                      <span class="highlight-it">building&nbsp;relations</span>,
                       <span class="highlight-it">empowering&nbsp;people</span>,
-                      <span class="highlight-it">adaptive planning</span>,
-                      <span class="highlight-it">embracing the change</span>,
+                      <span class="highlight-it">adaptive&nbsp;planning</span>,
+                      <span class="highlight-it">embracing&nbsp;the&nbsp;change</span>,
                       <span class="highlight-it">improvising</span>,
-                      <span class="highlight-it">shifting perspectives</span>,
-                      <span class="highlight-it">building kick-ass  teams</span>,
-                      <span class="highlight-it">nurturing trust</span>
-                      - this is what I would describe my major skills that I would like to use and develop even further.</p>
+                      <span class="highlight-it">shifting&nbsp;perspectives</span>,
+                      <span class="highlight-it">building&nbsp;kick-ass&nbsp;teams</span>,
+                      <span class="highlight-it">nurturing&nbsp;trust</span> </p>
+                      <p> - this is what I would describe my major skills that I would like to use and develop even further.</p>
                     <p> Below my <span class="violet-text">areas of focus + tools</span> I am familiar with:</p>
                 </div>
 
@@ -311,7 +312,7 @@
                           <button type="button" class="skill-click-area skill-close"></button>
                           <div class="box skill-list">
                               <ul>
-                                  <li>html5, css3 (and sass), javascript</li>
+                                  <li>html5, css3 (and sass), javascript (...)</li>
                                   <li>web-base technologies</li>
                                   <li>best practices</li>
                                   <li>current standards</li>
@@ -420,10 +421,8 @@
                           <div class="box skill-list">
                               <ul>
                                   <li>web design trends</li>
-                                  <li>photoshop</li>
-                                  <li>illustrator</li>
-                                  <li>indesign</li>
-                                  <li>lightrooom</li>
+                                  <li>ux principles</li>
+                                  <li>adobe cc (Ps, Ai, Id, Dw, Lr)</li>
 
                               </ul>
                           </div>
